Cleans request content validator
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>